# RAG_chat_system

./: .env  .gitignore  README.md  configuration.py  file.md  main.py  pyproject.toml  streamlit_learning.py
models/: models_document.py
